--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.89"
 regex = "1.11.0"
+reqwest = { version = "0.12.8", features = ["blocking"] }
+similar = "2.6.0"
